--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "peerDependencies": {
     "react": "*",
-    "react-native": ">=0.47.0"
+    "react-native": ">=0.64.0"
   },
   "author": "Steve Potter",
   "license": "BSD-3-Clause",
@@ -42,6 +42,7 @@
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
+    "react-native": "0.64",
     "semantic-release": "^15.13.31"
   },
   "release": {
